# print_key

./: .gitignore  Cargo.toml  README.md  compile-all-targets.sh  release.sh
src/: args.rs  main.rs
