[package]
name = "print_key"
version = "1.0.0"
repository = "https://github.com/Canop/print_key"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
description = "Print the key combination you type"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
crokey = "0.4"
crossterm = "0.23.1"
