[package]
name = "print_key"
version = "2.0.0"
repository = "https://github.com/Canop/print_key"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
description = "Print the key combination you type"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crokey = "0.6.1"

[patch.crates-io]
crokey = { path = "../crokey" }
